--- a/source/index.html
+++ b/source/index.html
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section class="screen screen--hidden screen--story" id="story">
+    <section class="screen screen--hidden screen--story screen--end-fill" id="story">
 
       <div class="slider swiper-container js-slider">
 
