--- a/source/index.html
+++ b/source/index.html
@@ -397,10 +397,13 @@
       <div class="screen__wrapper">
         <div class="result result--prize">
           <div class="result__image">
-            <picture>
-              <source srcset="img/result2-mob.png 1x, img/result2-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result2.png" srcset="img/result2@2x.png 2x" alt="">
-            </picture>
+            <div class="result__image-inner">
+              <img src="img/module-2/win-suitcase/prepared/leaf blue 2.png" class="result__image--leaf-left" alt="">
+              <img src="img/module-2/win-suitcase/prepared/leaf blue 1.png" class="result__image--leaf-right" alt="">
+              <img src="img/module-2/win-suitcase/prepared/leaf green.png" class="result__image--leaf-green" alt="">
+              <img src="img/module-2/win-suitcase/prepared/suitcase.png" class="result__image--suitcase" alt="">
+              <img src="img/module-2/win-suitcase/prepared/flamingo.png" class="result__image--flamingo" alt="">
+            </div>
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
